# TDS-PROJECT-2

./: agent.py  main.py  pyproject.toml  scraper.py
tests/: ntest.py  test.py  test2.py
tools/: add_dependencies.py
